// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BallotTrackingModal.vue renders for ballot counted: for ballot counted 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-content"
  >
    <div
      class="box"
    >
      <div
        class="counted"
      >
        <h1
          class="title"
        >
          <span>
            ballotCountedTitle
          </span>
        </h1>
         
        <div
          class="content"
        >
          <div>
            <p>
              ballotCountedTopMessage
            </p>
          </div>
        </div>
         
        <div
          class="content ballot-status"
        >
          <div
            class="ballot-data has-text-weight-semibold"
          >
            
            mockedTrackingId
          
          </div>
           
          <div
            class="ballot-status-bottom"
          >
            <div
              class="ballot-data"
            >
              <span
                class="has-text-weight-semibold"
              >
                ballotLocationLabel
              </span>
               mockedLocation
            
            </div>
             
            <div
              class="ballot-data"
            >
              <span
                class="has-text-weight-semibold"
              >
                ballotVoteTimeLabel
              </span>
               July 31, 2019 12:30 pm EDT
            
            </div>
          </div>
        </div>
         
        <div
          class="content"
        >
          <div>
            <i18n-stub
              path="ballotCountedBottomMessage"
              tag="p"
            >
              <a
                href="https://aka.ms/ElectionGuardMoreInfo"
              >
                ballotClickHere
              </a>
            </i18n-stub>
          </div>
        </div>
         
        <languagetoggle-stub />
         
        <a
          class="button is-dark has-text-weight-bold"
          href="#"
        >
          
          close
        
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`BallotTrackingModal.vue renders for ballot discarded: for ballot discarded 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-content"
  >
    <div
      class="box"
    >
      <div
        class="discarded"
      >
        <h1
          class="title"
        >
          <span>
            ballotDiscardedTitle
          </span>
        </h1>
         
        <div
          class="content"
        >
          <div>
            <p>
              ballotDiscardedTopMessage
            </p>
          </div>
        </div>
         
        <div
          class="content ballot-status"
        >
          <div
            class="ballot-data has-text-weight-semibold"
          >
            
            mockedTrackingId
          
          </div>
           
          <div
            class="ballot-status-bottom"
          >
            <div
              class="ballot-data"
            >
              <span
                class="has-text-weight-semibold"
              >
                ballotLocationLabel
              </span>
               mockedLocation
            
            </div>
             
            <div
              class="ballot-data"
            >
              <span
                class="has-text-weight-semibold"
              >
                ballotVoteTimeLabel
              </span>
               July 31, 2019 12:30 pm EDT
            
            </div>
          </div>
        </div>
         
        <div
          class="content"
        >
          <div>
            <i18n-stub
              path="ballotDiscardedBottomMessage"
              tag="p"
            >
              <a
                href="https://aka.ms/ElectionGuardMoreInfo"
              >
                ballotClickHere
              </a>
            </i18n-stub>
          </div>
        </div>
         
        <languagetoggle-stub />
         
        <a
          class="button is-dark has-text-weight-bold"
          href="#"
        >
          
          close
        
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`BallotTrackingModal.vue renders for ballot not found: for ballot not found 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
  />
   
  <div
    class="modal-content"
  >
    <div
      class="box"
    >
      <div
        class="not-found"
      >
        <h1
          class="title"
        >
          <span>
            ballotNotFoundTitle
          </span>
        </h1>
         
        <div
          class="content"
        >
          <div>
            <p>
              ballotNotFoundTopMessage
            </p>
             
            <ol>
              <li>
                ballotNotFoundListItem1
              </li>
               
              <li>
                <i18n-stub
                  path="ballotNotFoundListItem2"
                >
                  <a
                    href="Mocked Contact"
                  >
                    ballotNotFoundListItem2LinkLabel
                  </a>
                </i18n-stub>
              </li>
            </ol>
          </div>
        </div>
         
        <div
          class="content ballot-status"
        >
          <div
            class="ballot-data has-text-weight-semibold"
          >
            
            mockedTrackingId
          
          </div>
           
          <!---->
        </div>
         
        <div
          class="content"
        >
          <div>
            <i18n-stub
              path="ballotNotFoundBottomMessage"
              tag="p"
            >
              <a
                href="https://aka.ms/ElectionGuardMoreInfo"
              >
                ballotClickHere
              </a>
            </i18n-stub>
          </div>
        </div>
         
        <languagetoggle-stub />
         
        <a
          class="button is-dark has-text-weight-bold"
          href="#"
        >
          
          close
        
        </a>
      </div>
    </div>
  </div>
</div>
`;
